eb_parser/src/snapshots/eb_core__parser__function__test__parse2.snap
---
source: src/parser/function.rs
expression: "parse(&mut ctx).expect(\"fail to parse\")"

---
Node {
    name: "f",
    params: [
        Param {
            name: "x",
        },
    ],
    body: [],
}
